# fortepyan

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: ci_docs.yml
.github/workflows/: ci_docs.yml  ci_tests.yaml  deploy.yml
dashboards/: merge_files.py
docs/: index.md  reference.md
docs/assets/: extra.css
docs/documentation/: how_to_documentation.md  midi_classes.md  rendering.md  sustain.md  visualization.md
docs/examples/: visualizations.md
documentation/how_to_documentation/: index.html
documentation/midi_classes/: index.html
documentation/rendering/: index.html
documentation/sustain/: index.html
documentation/visualization/: index.html
examples/visualizations/: index.html
fortepyan/: __init__.py  config.py  main.py
fortepyan/analytics/clustering/: process.py  structures.py  views.py
fortepyan/animation/: __init__.py  evolution.py  main.py  pianoroll.py
fortepyan/audio/: render.py  soundfont.py
fortepyan/demo/diffusion/: main.py  process.py
fortepyan/midi/: containers.py  structures.py  tools.py
fortepyan/view/: __init__.py
fortepyan/view/animation/: dualroll.py  evolution.py  main.py  pianoroll.py
fortepyan/view/pianoroll/: __init__.py  dual.py  main.py  structures.py
fortepyan/viz/: __init__.py  pianoroll.py  structures.py
fortepyan/web/: database.py
scripts/dataset_builders/: atepp_base.py  common.py  ds_internship.py  giant_midi_base.py  hanon.py  maestro_base.py  maestro_sustain.py  pianoforai_base.py  pianoforai_sustain.py
scripts/release/: finish_release.sh  start_release.sh
search/: search_index.json
tests/midi/: test_structures.py  test_tools.py
tests/resources/: expected_sustain_output.csv  test_midi.mid
tests/view/pianoroll/: test_main.py
