# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortepyan"
version = "0.2.7"
description = "Process MIDI piano with (almost) no pain"
readme = "README.md"
authors = [{ name = "Piano For AI", email = "roszcz+fortepyan@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["midi", "music", "piano"]
dependencies = [
    "appdirs>=1.4.4",
    "boto3",
    "midi2audio>=0.1.1",
    "numpy>=1.23.4",
    "pretty-midi>=0.2.9",
    "psycopg2>=2.9.5",
    "pydub>=0.25",
    "SQLAlchemy>=1.4.45",
    "matplotlib>=3.6.2",
    "Levenshtein>=0.20.9",
    "cmcrameri>=1.5",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Nospoko/fortepyan"

[tool.setuptools]
packages = [
    "fortepyan",
    "fortepyan.view",
    "fortepyan.midi",
    "fortepyan.audio",
    "fortepyan.view.animation",
    "fortepyan.view.pianoroll",
    "fortepyan.analytics.clustering",
]

[tool.bumpver]
current_version = "0.2.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"fortepyan/__init__.py" = [
    '__version__ = "{version}"',
]
